--- a/StatsInference_Proj_Part1.Rmd
+++ b/StatsInference_Proj_Part1.Rmd
@@ -1,20 +1,61 @@
 ---
-title: "StatsInference_Proj_Part1"
-output: html_document
+title: "Statistical Inference Project Part 1"
+Date: Dec. 21st. 2014
+output:
+  pdf_document:
+    fig_caption: yes
+    highlight: tango
+    number_sections: yes
+    toc: yes
+Author: Ahmed Assal
 ---
+## Synopsis
+This is the project for the statistical inference class. In it, you will use simulation to explore inference. This is the first part of the project which is a simulation exercise. 
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+The exponential distribution can be simulated in R with rexp(n, lambda) where lambda is the rate parameter. The mean of exponential distribution is 1/lambda and the standard deviation is also also 1/lambda. Set lambda = 0.2 for all of the simulations. In this simulation, I will investigate the distribution of averages of 40 exponential(0.2)s. Note that I will do a thousand simulated averages of 40 exponentials to illustrate via simulation and associated explanatory text the properties of the distribution of the mean of 40 exponential(0.2)s.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+## Simulation
+```{r}
+# setting lamda the rate
+lambda = 0.2
+
+# number of samples
+nSamples = 40
+
+# number of simulations
+nSimulations = 2000
+
+# simulating
+expoMeans = NULL
+for( i in 1:nSimulations) expoMeans = c(expoMeans, mean(rexp(40, rate = lambda)))
+
+```
+
+## Questions
+### Q1-Comparing the simulation distribution center to the theoretical center of the distribution.
+```{r}
+expoDistributionMean = mean(expoMeans)
+```
+
+The simulation distribution mean is **`r expoDistributionMean`** which is pretty close to the theoritical distribution mean which is **`r 1/lambda`**      
+
+### Q2-Comparing the simulation distribution variance to the theoretical variance of the distribution.
+```{r}
+expoDistributionSD = sd(expoMeans)
+```
+The simulation distribution standard deviation is **`r expoDistributionSD`** which is pretty close to the theoritical distribution standard deviation which is **`r 1/lambda * 1/sqrt(nSamples)`**    
+
+### Q3-Showing that the simulation distribution is approximately normal.
 
 ```{r}
-summary(cars)
+library(ggplot2)
+expoMeansDataframe = data.frame(expoMeans)
+ggplot(expoMeansDataframe, aes(x= expoMeansDataframe$expoMeans)) + 
+geom_histogram(aes(y=..density..), colour="black", fill="violet",  binwidth = 2 * lambda) + 
+stat_function(fun = dnorm, colour = "blue", alpha =0.5, size = 1,  fill = "yellow", 
+      args = list(mean = expoDistributionMean, sd = expoDistributionSD)) +
+geom_vline(xintercept = expoDistributionMean,colour="red",size=2) +
+xlab("Exponential Means") +
+ggtitle("Histogram of the means of simulated exponential distributions") 
 ```
-
-You can also embed plots, for example:
-
-```{r, echo=FALSE}
-plot(cars)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+It is obvious that the simulated distribution of exponentials (pink bins) can be approximiated as a normal distribution (blue curve).
